@@ -1,3 +1,9 @@
+2011-09-25  Dov Grobgeld  <dov.grobgeld@gmail.com>
+
+        * giv-win.gob, giv-parser.gob : Added tool for counting marks in rectangle.
+
+        * giv-win.gob : Fixed bug that he -join flag wasn't functioning.
+
 2011-09-13  Dov Grobgeld  <dov.grobgeld@gmail.com>
 
         * Added option to turn off autocontrast on image load.
